--- a/css2/ujprojekt.css
+++ b/css2/ujprojekt.css
@@ -13,7 +13,9 @@
 .remove-question {
   cursor: pointer; /* egér */
   color: white; /* piros */
-  background-color: red;
+  background-color: red;/* piros háttér */
+  margin-top: 10px; /* margó fent */
+  border-radius: 5px; /* lekerekített sarkok */
 }
 /* kérdés eltávolítása ha fölé visszük az egeret */
 .remove-question:hover{
@@ -25,6 +27,7 @@ button {
   width: 40%; /* szélesség */
   background-color: #4ca750; /* zöld háttér */
   color: white; /* fehér szöveg */
+  border-radius: 5px; /* lekerekített sarkok */
 }
 /* új kérdés hozzáadás gomb ha fölé visszük az egeret */
 button:hover {
