--- a/css2/ujprojekt.css
+++ b/css2/ujprojekt.css
@@ -39,3 +39,9 @@ button:hover {
   padding: 5px; /* belső térköz */
   font-size: 14px; /* betűméret */
 }
+.custom-question-select {
+  width: 80%;
+  padding: 5px;
+  font-size: 1rem;
+  border-radius: 5px;
+}
