--- a/css2/ertekeles_kitoltok.css
+++ b/css2/ertekeles_kitoltok.css
@@ -38,10 +38,10 @@ form {
   flex-direction: column; /* egymás alá */
   gap: 15px; /* térköz*/
 }
-/* instrukció */
+/* instrukció 
 .instructions{
-  margin-bottom: 10px; /* alsó margó */
-}
+  margin-bottom: 10px; 
+}*/
 /* kérdéstípusok */
 input[type="text"],
 input[type="number"],
@@ -114,3 +114,24 @@ select {
 .button-container button {
   margin-right: 10px; /* 10px térköz a gombok között */
 }
+
+.checkbox-container {
+  margin-bottom: 20px; /* margó a checkbox konténer alján */
+  padding: 10px 0; /* felső és alsó padding */
+}
+
+.checkbox-container label {
+  display: inline-block;
+  margin-right: 10px; /* Különbség a link és a checkbox között */
+}
+
+.checkbox-container a {
+  margin-bottom: 5px; /* Térköz a link és a checkbox között */
+  display: inline-block; /* Az A tag blokkszintű elemmé válik */
+  color: #007BFF; /* Link színe */
+}
+
+.checkbox-container input[type="checkbox"] {
+  margin-right: 5px; /* Kis térköz a checkbox és a label között */
+}
+
